--- a/pppppp/View/TimelineView/TimelineNotificationView/TimelineNotificationView.storyboard
+++ b/pppppp/View/TimelineView/TimelineNotificationView/TimelineNotificationView.storyboard
@@ -30,7 +30,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpD-yJ-fAr">
-                                <rect key="frame" x="231" y="105.66666666666667" width="74" height="26.666666666666671"/>
+                                <rect key="frame" x="201.66666666666666" y="105.66666666666667" width="73.999999999999972" height="26.666666666666671"/>
                                 <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="22"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -42,10 +42,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KHK-1Z-pLW">
-                                <rect key="frame" x="329" y="107" width="24" height="24"/>
+                                <rect key="frame" x="24" y="151" width="24" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="24" id="cRT-Sz-Ufg"/>
-                                    <constraint firstAttribute="height" constant="24" id="uRQ-es-0ua"/>
+                                    <constraint firstAttribute="width" constant="24" id="Ddl-KS-c8N"/>
+                                    <constraint firstAttribute="height" constant="24" id="SpL-3K-1VF"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system" imagePadding="4">
@@ -56,12 +56,6 @@
                                 <rect key="frame" x="325.66666666666669" y="63" width="40.333333333333314" height="14"/>
                                 <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="12"/>
                                 <color key="textColor" name="white50"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p0j-q4-gkr">
-                                <rect key="frame" x="355" y="108.66666666666667" width="11" height="21.000000000000014"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="H6H-Hp-6vn">
@@ -84,26 +78,32 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p0j-q4-gkr">
+                                <rect key="frame" x="52" y="152.66666666666666" width="11" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="mainColor"/>
                         <constraints>
+                            <constraint firstItem="dpD-yJ-fAr" firstAttribute="leading" secondItem="LZx-NC-vdg" secondAttribute="trailing" constant="24" id="04O-WO-68L"/>
                             <constraint firstItem="SCM-b5-YE5" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="16" id="2rQ-gl-YYa"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="H6H-Hp-6vn" secondAttribute="trailing" id="3nk-g4-yyi"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="H6H-Hp-6vn" secondAttribute="bottom" id="AVq-uo-L92"/>
-                            <constraint firstItem="KHK-1Z-pLW" firstAttribute="leading" secondItem="dpD-yJ-fAr" secondAttribute="trailing" constant="24" id="B8h-lA-C2F"/>
                             <constraint firstItem="LZx-NC-vdg" firstAttribute="centerY" secondItem="dpD-yJ-fAr" secondAttribute="centerY" id="FQ9-an-Lwv"/>
+                            <constraint firstItem="KHK-1Z-pLW" firstAttribute="top" secondItem="SCM-b5-YE5" secondAttribute="bottom" constant="8" id="Gjd-hf-bTs"/>
+                            <constraint firstItem="p0j-q4-gkr" firstAttribute="leading" secondItem="KHK-1Z-pLW" secondAttribute="trailing" constant="4" id="LB6-G9-vib"/>
                             <constraint firstItem="LZx-NC-vdg" firstAttribute="leading" secondItem="SCM-b5-YE5" secondAttribute="trailing" constant="20" id="O9c-LO-gjC"/>
-                            <constraint firstItem="KHK-1Z-pLW" firstAttribute="centerY" secondItem="p0j-q4-gkr" secondAttribute="centerY" id="Tze-wC-Bos"/>
                             <constraint firstItem="SCM-b5-YE5" firstAttribute="top" secondItem="hKi-VY-f8Q" secondAttribute="top" id="bsu-sj-TAl"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="p0j-q4-gkr" secondAttribute="trailing" constant="24" id="hue-Lz-C7E"/>
-                            <constraint firstItem="H6H-Hp-6vn" firstAttribute="top" secondItem="SCM-b5-YE5" secondAttribute="bottom" constant="40" id="ibx-NI-Xzs"/>
-                            <constraint firstItem="dpD-yJ-fAr" firstAttribute="centerY" secondItem="KHK-1Z-pLW" secondAttribute="centerY" id="k8I-tI-BMP"/>
+                            <constraint firstItem="KHK-1Z-pLW" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="fG0-AJ-ThO"/>
                             <constraint firstItem="SCM-b5-YE5" firstAttribute="centerY" secondItem="LZx-NC-vdg" secondAttribute="centerY" constant="-16" id="mXD-Fx-5bW"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="hKi-VY-f8Q" secondAttribute="trailing" constant="24" id="nCu-q9-OR2"/>
                             <constraint firstItem="SCM-b5-YE5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="q7W-rE-gjq"/>
                             <constraint firstItem="H6H-Hp-6vn" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="rPc-Xc-ogO"/>
-                            <constraint firstItem="p0j-q4-gkr" firstAttribute="leading" secondItem="KHK-1Z-pLW" secondAttribute="trailing" constant="2" id="yYw-J3-nAB"/>
+                            <constraint firstItem="H6H-Hp-6vn" firstAttribute="top" secondItem="KHK-1Z-pLW" secondAttribute="bottom" constant="8" id="wBl-Qv-HNF"/>
+                            <constraint firstItem="KHK-1Z-pLW" firstAttribute="centerY" secondItem="p0j-q4-gkr" secondAttribute="centerY" id="xX3-th-Zgj"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Post" largeTitleDisplayMode="always" id="LvU-zc-2sm"/>
